# tamagotchi-python-flask

./: .env.dev  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  docker-compose.yml  docker-entrypoint-dev.sh  fly.toml  mx_banks_codes.json  pyproject.toml
tamagotchi/: __init__.py  app.py  constants.py  manual_test.py  models.py  settings.py  shinkansen.py  tester.py  utils.py  views.py
tamagotchi/static/: front.js  style.css
tamagotchi/templates/: base.html  new_payin.html  new_payout.html  new_payout_co.html  new_payout_mx.html  payin.html  payins.html  payout.html  payouts.html  tester.html
