[tool.poetry]
name = "tamagotchi"
version = "0.1.0"
description = ""
authors = ["Leonardo Soto M. <leo.soto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.0"
click = "^8.1.3"
requests = "^2.28.1"
gunicorn = "^20.1.0"
python-shinkansen = "^0.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.10.0"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
