[tool.poetry]
name = "tamagotchi"
version = "0.1.0"
description = ""
authors = ["Leonardo Soto M. <leo.soto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.5"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.0"
click = "^8.1.3"
requests = "^2.31.0"
gunicorn = "^20.1.0"
python-shinkansen = "^0.7.2"
flask-httpauth = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.10.0"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
